# VoxelHashingGeng

./: .gitignore  CMakeLists.txt  CMakeLists2.txt  CMakeLists3.txt  CMakeLists4.txt  README.md  run.py  summary.txt
Example/: CMakeCache.txt  Makefile  cmake_install.cmake  load_frames  model.ply  pc.ply
ExampleSve/: 73.txt  73RidOfPlane.txt  CMakeCache.txt  Makefile  load_frames  model0.ply  model1.ply  model10.ply  model11.ply  model12.ply  model13.ply  model14.ply  model15.ply  model16.ply  model17.ply  model18.ply  model19.ply  model2.ply  model20.ply  model21.ply  model22.ply  model23.ply  model24.ply  model25.ply  model26.ply  model27.ply  model28.ply  model29.ply  model3.ply  model30.ply  model31.ply  model32.ply  model33.ply  model34.ply  model35.ply  model36.ply  model37.ply  model38.ply  model39.ply  model4.ply  (+19 more)
include/: FeatureCluster.h  ICP_Part.h  ICP_part.h  ObjectExtract.h  PointCloudGenerator.h  SaveFrame.h  SlamBase.h  Utils.h  VideoSet.h  bundleAdjustion.h  preview.h  ridOfPlane.h  tsdf.cuh  vhashing.h
include/impl/: blockalloc.h  lockset.h
lib/: CMakeCache.txt  Makefile  cmake_install.cmake
scene0220_02/: CMakeCache.txt  Makefile  cmake_install.cmake  scene0220_02.yaml
scene0220_02/RGB/: Untitled.ipynb
scene0220_02/RGB/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
scene0220_02/depth/: Untitled.ipynb
scene0220_02/depth/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
scene0220_02/tcw/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  init_transform.txt
src/: CMakeCache.txt  FeatureCluster.cpp  ICP_part.cpp  Makefile  ObjectExtract.cpp  PointCloudGenerator.cpp  RgbPart.cpp  SaveFrame.cpp  SlamBase.cpp  Utils.cpp  a.out  bundleAdjustion.cpp  cmake_install.cmake  cuda_dev.cu  main.cpp  ridOfPlane.cpp  savetsdf.cpp  tsdf.cu
